Fixed default sub menu styling on mobile sized screens.

--- a/_s-original/style.css
+++ b/_s-original/style.css
@@ -277,6 +277,14 @@ nav#top-header-nav ul > li > ul > li:hover > ul {
     box-shadow: none;
   }
 
+  nav#top-header-nav ul.sub-menu {
+    width: 100%;
+  }
+
+  nav#top-header-nav ul.sub-menu > li {
+    width: 100%;
+  }
+
   nav#top-header-nav ul > li > ul li {
     text-align: center;
   }
